<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media Plugin</string>
    <string name="title_media_plugin">多媒体插件</string>
    <string name="app_info_title">插件说明</string>
    <string name="app_info">此插件用于实现Blue-i 3.0车机原厂桌面的音乐卡片支持显示和控制第三方音乐APP，安装插件后原多媒体将被覆盖，可点击下方按钮恢复</string>
    <string name="btn_restore">恢复多媒体</string>
    <string name="permission_status_label">通知读取权限</string>
    <string name="permission_status_granted">已获取</string>
    <string name="permission_status_not_granted">未获取</string>
    <string name="connected_app_label">当前连接的应用</string>
    <string name="none">无</string>
</resources>
